// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemarkUtils and LinkUtils doesn't find block anchor within code block 1`] = `Array []`;

exports[`RemarkUtils and LinkUtils doesn't find block anchor within inline code 1`] = `Array []`;

exports[`RemarkUtils and LinkUtils findAnchors doesn't find block anchor within wikilink 1`] = `Array []`;

exports[`RemarkUtils and LinkUtils findAnchors one block anchor 1`] = `
Array [
  Object {
    "id": "block-anchor",
    "position": Position {
      "end": Object {
        "column": 53,
        "line": 2,
        "offset": 98,
      },
      "indent": Array [],
      "start": Object {
        "column": 40,
        "line": 2,
        "offset": 85,
      },
    },
    "type": "blockAnchor",
    "value": "^block-anchor",
  },
]
`;

exports[`RemarkUtils and LinkUtils findAnchors one header 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "position": Position {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "indent": Array [],
          "start": Object {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "text",
        "value": "h1",
      },
    ],
    "depth": 1,
    "position": Position {
      "end": Object {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "indent": Array [],
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "heading",
  },
]
`;

exports[`RemarkUtils and LinkUtils findLinks empty link 1`] = `Array []`;

exports[`RemarkUtils and LinkUtils findLinks filter link type 1`] = `
Array [
  Object {
    "alias": "foo",
    "from": Object {
      "fname": "foo",
      "id": "foo",
      "vaultName": "vault1",
    },
    "position": Position {
      "end": Object {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "indent": Array [],
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "to": Object {
      "anchorHeader": undefined,
      "fname": "foo",
      "vaultName": undefined,
    },
    "type": "wiki",
    "value": "foo",
    "xvault": false,
  },
]
`;

exports[`RemarkUtils and LinkUtils findLinks filter link type and loc match 1`] = `
Array [
  Object {
    "alias": "foo",
    "from": Object {
      "fname": "foo",
      "id": "foo",
      "vaultName": "vault1",
    },
    "position": Position {
      "end": Object {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "indent": Array [],
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "to": Object {
      "anchorHeader": undefined,
      "fname": "foo",
      "vaultName": undefined,
    },
    "type": "wiki",
    "value": "foo",
    "xvault": false,
  },
]
`;

exports[`RemarkUtils and LinkUtils findLinks filter link type and loc no match 1`] = `Array []`;

exports[`RemarkUtils and LinkUtils findLinks note ref 1`] = `
Array [
  Object {
    "alias": "foo.two",
    "from": Object {
      "fname": "foo.one",
      "id": "foo.one-id",
      "vaultName": "vault1",
    },
    "position": Position {
      "end": Object {
        "column": 30,
        "line": 3,
        "offset": 52,
      },
      "indent": Array [],
      "start": Object {
        "column": 19,
        "line": 3,
        "offset": 41,
      },
    },
    "to": Object {
      "anchorHeader": undefined,
      "fname": "foo.two",
      "vaultName": undefined,
    },
    "type": "wiki",
    "value": "foo.two",
    "xvault": false,
  },
  Object {
    "alias": undefined,
    "from": Object {
      "fname": "foo.one",
      "id": "foo.one-id",
      "vaultName": "vault1",
    },
    "position": Position {
      "end": Object {
        "column": 13,
        "line": 2,
        "offset": 22,
      },
      "indent": Array [],
      "start": Object {
        "column": 1,
        "line": 2,
        "offset": 10,
      },
    },
    "to": Object {
      "anchorHeader": undefined,
      "fname": "foo.two",
      "vaultName": undefined,
    },
    "type": "ref",
    "value": "foo.two",
    "xvault": false,
  },
]
`;

exports[`RemarkUtils and LinkUtils findLinks one link 1`] = `
Array [
  Object {
    "alias": "bar",
    "from": Object {
      "fname": "foo",
      "id": "foo",
      "vaultName": "vault1",
    },
    "position": Position {
      "end": Object {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "indent": Array [],
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "to": Object {
      "anchorHeader": undefined,
      "fname": "bar",
      "vaultName": undefined,
    },
    "type": "wiki",
    "value": "bar",
    "xvault": false,
  },
]
`;

exports[`RemarkUtils and LinkUtils findLinks xvault link 1`] = `
Array [
  Object {
    "alias": "bar",
    "from": Object {
      "fname": "foo",
      "id": "foo",
      "vaultName": "vault1",
    },
    "position": Position {
      "end": Object {
        "column": 25,
        "line": 1,
        "offset": 24,
      },
      "indent": Array [],
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "to": Object {
      "anchorHeader": undefined,
      "fname": "bar",
      "vaultName": "vault2",
    },
    "type": "wiki",
    "value": "bar",
    "xvault": true,
  },
]
`;

exports[`RemarkUtils and LinkUtils updateLink basic 1`] = `
"# Foo.One
![[foo.two]]
Regular wikilink: [[foo.bar]]
"
`;

exports[`RemarkUtils and LinkUtils updateLink multiple links present link no space 1`] = `
"[[foo]]
nospace[[bar]]
onespace [[foo]]
"
`;

exports[`RemarkUtils and LinkUtils updateLink multiple links present link onespace 1`] = `
"[[foo]]
nospace[[foo]]
onespace [[bar]]
"
`;

exports[`RemarkUtils and LinkUtils updateLink multiple links present only link 1`] = `
"[[bar]]
nospace[[foo]]
onespace [[foo]]
"
`;
